# mastoot

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
examples/: fetch_home.rs
src/: cli.rs  config.rs  icons.rs  lib.rs  logging.rs  main.rs  util.rs
src/api/: auth.rs  client.rs  endpoints.rs  error.rs  html.rs  mod.rs  models.rs  music.rs  pagination.rs  streaming.rs
src/commands/: accounts.rs  login.rs  logout.rs  mod.rs  run.rs  switch.rs  whoami.rs
src/state/: app.rs  event.rs  mod.rs  task.rs  timeline.rs
src/ui/: app.rs  images.rs  mod.rs  theme.rs
src/ui/screens/: account_list.rs  account_switcher.rs  compose.rs  mod.rs  notifications.rs  profile.rs  status_detail.rs  timeline.rs
src/ui/widgets/: alt_text.rs  help.rs  media.rs  mod.rs  notification_card.rs  reply_preview.rs  status_card.rs  textarea.rs  wrap.rs
src/util/: time.rs
tests/: api_integration.rs
