[package]
name = "mastoot"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "An aesthetically-driven Mastodon TUI client"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ReflectionL/mastoot"
keywords = ["mastodon", "tui", "ratatui", "fediverse"]
categories = ["command-line-utilities"]

[[bin]]
name = "mastoot"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
futures-util = "0.3"

# HTTP (rustls only, no openssl)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls", "gzip", "brotli", "http2"] }
reqwest-eventsource = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"

# Errors
anyhow = "1"
thiserror = "2"

# URL / Time
url = "2"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# CLI / Config / Paths
clap = { version = "4", features = ["derive"] }
toml = "0.8"
directories = "5"

# Auth storage
keyring = { version = "3", features = ["apple-native", "sync-secret-service", "windows-native"] }
secrecy = { version = "0.10", features = ["serde"] }

# HTML parsing
scraper = "0.21"
ego-tree = "0.9"

# Random / crypto for OAuth PKCE + state
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"

# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
ratatui-image = { version = "10", default-features = false, features = ["crossterm"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }

# Utilities
unicode-width = "0.2"
open = "5"
percent-encoding = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
pretty_assertions = "1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Allow a few pedantic lints that are too noisy for an application crate.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
too_many_lines = "allow"
similar_names = "allow"
multiple_crate_versions = "allow"
# Prose quality — the Mastodon API uses many proper nouns that would
# otherwise need backticks (GoToSocial, JetBrains, ActivityPub …).
doc_markdown = "allow"
# Command handlers keep an `async fn` signature to dispatch uniformly,
# even when some don't yet call an awaited endpoint.
unused_async = "allow"
# Many API param structs are naturally bool-heavy (e.g. timelines has
# `local`, `remote`, `only_media`); a state machine would be worse.
struct_excessive_bools = "allow"
needless_pass_by_value = "allow"
items_after_statements = "allow"
ref_option = "allow"
large_enum_variant = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
